--- a/kharitonov/makefile
+++ b/kharitonov/makefile
@@ -1,21 +1,23 @@
-SRCS=$(wildcard *.cpp)
-BINS=$(SRCS:.cpp=)
-
 CXXFLAGS := $(shell pkg-config --cflags ibex) 
-LIBS	 := $(shell pkg-config --libs  ibex)
+LIBS	 := $(shell pkg-config --libs   ibex)
 
+CXXFLAGS := $(CXXFLAGS) -O3 -DNDEBUG -Wno-unused-variable -fopenmp -frounding-math -std=c++11 -I/usr/local/include/eigen -I/usr/local/libigl/include/igl
 
-#feq ($(DEBUG), yes)
-#CXXFLAGS := $(CXXFLAGS) -O0 -g -pg -Wall -frounding-math -ffloat-store -fopenmp -Wno-unknown-pragmas -Wno-unused-variable
-#CXXFLAGS := $(CXXFLAGS) -O0 -g -pg -pedantic -frounding-math -ffloat-store  -Waddress -Warray-bounds  -Wc++11-compat  -Wchar-subscripts   -Wenum-compare    -Wcomment  -Wformat    -Wmain -Wmaybe-uninitialized  -Wmissing-braces -Wnonnull     -Wparentheses    -Wreorder  -Wreturn-type   -Wsequence-point  -Wsign-compare  -Wstrict-aliasing -Wstrict-overflow=1 -Wswitch -Wtrigraphs -Wuninitialized -Wunused-function -Wunused-label    -Wunused-value    -Wunused-variable -Wvolatile-register-var 
-#else
-CXXFLAGS := $(CXXFLAGS) -O3 -DNDEBUG -Wno-unused-variable -fopenmp -frounding-math -std=c++11
-#endif
+EXEC=test_dabbene test_kharitonov
 
-all: $(BINS)
+all: $(EXEC)
 
-% :	%.cpp
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -o $@ $< $(LIBS)
+test_kharitonov: kharitonov.o test_kharitonov.o
+	g++ -o $@ $^ $(CXXFLAGS) $(LIBS)
+	
+test_dabbene: dabbene.o test_dabbene.o
+	g++ -o $@ $^ $(CXXFLAGS) $(LIBS)
+
+%.o: %.cpp
+	g++ -o $@ -c $< $(CXXFLAGS) $(LIBS)
 
 clean:
-	rm -f $(BINS)
+	rm -rf *.o
+
+mrproper: clean
+	rm -rf $(EXEC)
